// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interstitial renders correctly and matches snapshot 1`] = `
<div
  class="interstitial-container container-center-100"
  data-testid="interstitial"
>
  <div
    class="flex jc-center ai-center w-100"
  >
    <a
      class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 theme-button interstitial-button uppercase py-12 px-16 --secondary"
      data-mrf-recirculation="n_interstitial"
      data-variant="secondary"
      href="https://ejemplo.com"
      rel="nofollow"
      target="_blank"
      title="Texto del botón"
      type="button"
    >
      Texto del botón
      <i
        class="icon theme-icon --icon-20"
      >
        <mock-icon
          name="arrowRight"
        />
      </i>
    </a>
  </div>
</div>
`;

exports[`Interstitial renders with FotoAl100 layout and matches snapshot 1`] = `
<div
  class="interstitial-container container-center-100 pb-32"
  data-testid="interstitial"
>
  <div
    class="flex jc-center ai-center w-100"
  >
    <a
      class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 theme-button interstitial-button uppercase py-12 px-16 --secondary"
      data-mrf-recirculation="n_interstitial"
      data-variant="secondary"
      href="https://ejemplo.com"
      rel="nofollow"
      target="_blank"
      title="Texto del botón"
      type="button"
    >
      Texto del botón
      <i
        class="icon theme-icon --icon-20"
      >
        <mock-icon
          name="arrowRight"
        />
      </i>
    </a>
  </div>
</div>
`;
